--- a/index.html
+++ b/index.html
@@ -185,20 +185,37 @@ button:hover{transform:scale(1.05);}
         <button onclick="nextPage()">ถัดไป ➜</button>
     </div>
 
-    <div class="page">
-        <h1>รักที่สุดเลย ❤️</h1>
-        <p>และจะรักแบบนี้ตลอดไป ✨</p>
+<div class="page">
+    <h1>รักที่สุดเลย ❤️</h1>
+    <p>และจะรักแบบนี้ตลอดไป ✨</p>
 
-        <p style="margin-top:25px; font-size:18px;">
-            เพลงนี้เค้าให้พี่นะ อย่าลืมกดฟังนะครับ 💕
-        </p>
+    <p style="margin-top:25px; font-size:18px;">
+        เพลงนี้เค้าให้พี่นะ อย่าลืมกดฟังนะครับ 💕
+    </p>
 
-        <a class="song-link"
-           href="https://youtu.be/dCEvQ69aGYs?si=Kyuurq79sSSB2U4l"
-           target="_blank">
-           🎵 กดฟังเพลงของเรา
-        </a>
-    </div>
+    <!-- ปุ่มกด -->
+    <a href="https://youtu.be/dCEvQ69aGYs?si=Kyuurq79sSSB2U4l"
+       target="_blank"
+       style="
+           display:inline-block;
+           margin-top:20px;
+           padding:14px 30px;
+           background:white;
+           color:#ff1493;
+           border-radius:30px;
+           font-weight:bold;
+           text-decoration:none;
+           font-size:18px;
+       ">
+       🎵 กดฟังเพลงนี้
+    </a>
+
+    <!-- ลิงก์โชว์เต็ม -->
+    <p style="margin-top:15px; font-size:14px; word-break:break-all;">
+        https://youtu.be/dCEvQ69aGYs?si=Kyuurq79sSSB2U4l
+    </p>
+</div>
+
 
 </div>
 
@@ -293,3 +310,4 @@ function showPhotos(){
 
 </body>
 </html>
+
